# posterization_cuda

./: .clang-format  .gitignore  CMakeLists.txt
analysis/: vis.ipynb
include/: boundary.hpp  compensation.hpp  edt.hpp  edt_propogare.hpp  quantizer.hpp
include/utils/: file_utils.hpp
test/: CMakeLists.txt  test_boundary.cu  test_compensation.cu  test_edt.cu  test_edt_bf.cu  test_quantizer.cu  test_sign_map.cu  test_sz3_quantizer.cpp
